[package]

authors = [ "tophattedcoder@gmail.com" ]
description = "Just-In-Time Compilation in Rust using LibJIT bindings"
documentation = "http://www.rust-ci.org/TomBebbington/jit.rs/doc/jit/"
keywords = [ "compile", "compiler", "jit", "interpreter" ]
license = "MIT"
name = "jit"
readme = "README.md"
repository = "https://github.com/TomBebbington/jit.rs"
version = "0.0.4"

[lib]

name = "jit"
path = "src/jit.rs"

[dependencies.libjit-sys]
path = "libjit-sys"
version = "*"