[package]

exclude = [ ".gitmodules", ".gitignore", ".travis.yml" ]
authors = [ "Tom Bebbington <tophattedcoder@gmail.com>" ]
description = "Just-In-Time Compilation in Rust using LibJIT bindings"
documentation = "http://tombebbington.github.io/jit.rs/"
keywords = [ "compile", "compiler", "jit", "interpreter" ]
license = "MIT"
name = "jit"
readme = "README.md"
repository = "https://github.com/TomBebbington/jit.rs"
version = "0.3.6"

[lib]

name = "jit"
path = "src/jit.rs"

[dependencies]
libjit-sys = "*"
jit_macros = "*"