[package]
name = "libjit-sys"
version = "0.1.1"
description = "Just-In-Time Compilation in Rust using LibJIT bindings"
authors = ["Tom Bebbington <tophattedcoder@gmail.com>"]
keywords = [ "compile", "compiler", "jit", "interpreter" ]
repository = "https://github.com/TomBebbington/jit.rs"
license = "MIT"
links = "jit"
build = "build.rs"

[lib]
name = "libjit-sys"
path = "lib.rs"

[build-dependencies]
pkg-config = "*"